# object-identify-SVR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autobuffer.cc  autobuffer.h  client  client.cc  cmake.sh  compile.sh  constantsprotocol.h  daemon.cc  daemon.h  httpserver.cc  httpserver.h  log.h  main.cc  netscenebase.cc  netscenebase.h  netscenedispatcher.cc  netscenedispatcher.h  server  server.cc  servermain.cc  signalhandler.cc  signalhandler.h  strutil.h  test_client.cc  testclient.cc  threadpool.cc  threadpool.h  unix_socket.h
autogen/: netscenequeryimg.pb.cc  netscenequeryimg.pb.h
businesslayer/: constantsprotocol.h  netscene_changenickname.cc  netscene_changenickname.h  netscene_getfile.cc  netscene_getfile.h  netscene_gethotsearch.cc  netscene_gethotsearch.h  netscene_getrecentquery.cc  netscene_getrecentquery.h  netscene_gettrainprogress.cc  netscene_gettrainprogress.h  netscene_register.cc  netscene_register.h  netscene_uploadavatar.cc  netscene_uploadavatar.h  netscenetypes.h  registry.cc  registry.h
businesslayer/bear_shop/: dbitem_bearuser.cc  dbitem_bearuser.h  netscene_bearshoplogin.cc  netscene_bearshoplogin.h  netscene_bearshopregister.cc  netscene_bearshopregister.h
businesslayer/covid19infected/: dbitem_virususer.cc  dbitem_virususer.h  netscene_getcovid19infected.cc  netscene_getcovid19infected.h  netscene_virususer.cc  netscene_virususer.h
businesslayer/db/: userinfo.cc  userinfo.h
businesslayer/dbitem/: dbitem_recognition.cc  dbitem_recognition.h  dbitem_userinfo.cc  dbitem_userinfo.h
businesslayer/netscene_covid19infected/: netscene_getcovid19infected.cc  netscene_getcovid19infected.h
businesslayer/netscene_queryimg/: netscene_queryimg.cc  netscene_queryimg.h  oi.py  queryimg.py
dao/: CMakeLists.txt  connection.cc
framework/netscene/: netscene_getindexpage.h
http/: firstline.cc  firstline.h  headerfield.cc  headerfield.h  httprequest.cc  httprequest.h  httprequset.cc  httpresponse.cc  httpresponse.h  parsermanager.cc  parsermanager.h  requestline.cc  requestline.h
netscene/: constantsprotocol.h  netscene_getindexpage.cc  netscene_getindexpage.h  netscene_gettrainprogress.cc  netscene_gettrainprogress.h  netscene_hellosvr.h  netscene_queryimg.cc  netscene_queryimg.h  netscenebase.cc  netscenebase.h  netscenedispatcher.cc  netscenedispatcher.h
netscene/netscene_queryimg/: netscene_queryimg.cc  netscene_queryimg.h  queryimg.py  queryimgfrombaidu.py
protos/: netscenechangenickname.proto  netscenegethotsearch.proto  netscenegettrainprogress.proto  netscenequeryimg.proto  netsceneregister.proto  netsceneuploadavatar.proto
scripts/: autogen.sh  cmake.sh  killproc.sh  killprocess.sh  launchproxy.sh  oi.py  plantidentify.py  pulllog.sh  synccode.sh
socket/: blocksocket.cc  blocksocket.h  socketepoll.cc  socketepoll.h  socketpoll.cc  socketpoll.h  socketselect.cc  socketselect.h  unix_socket.h
time/: timeutil.cc  timeutil.h
utils/: autobuffer.cc  autobuffer.h  log.cc  log.h  threadpool.cc  threadpool.h  timeutil.cc  timeutil.h
utils/messagequeue/: messagequeue.cc  messagequeue.h
utils/threadpool/: threadpool.cc  threadpool.h
